--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <button class="filter-button" data-gender="all">Tümü</button>
             <button class="filter-button" data-gender="kadın">Kadın</button>
             <button class="filter-button" data-gender="erkek">Erkek</button>
-            <button class="filter-button" data-category="şort-kadın">Kadın Şort</button>
-            <button class="filter-button" data-category="şort-erkek">Erkek Şort</button>
+            <button class="filter-button" data-gender="kadın" data-category="ŞORT-KADIN">Kadın Şort</button>
+            <button class="filter-button" data-gender="erkek" data-category="ŞORT-ERKEK">Erkek Şort</button>
             <input type="text" id="search-input" placeholder="Model ara..." class="filter-input">
         </nav>
     </header>
